- Cropping section Up-down issue fixed

--- a/frontend/web/css/customstyle.css
+++ b/frontend/web/css/customstyle.css
@@ -383,3 +383,7 @@ img.selected {
 .btn-primary{
     width: 100%;
 }
+
+.photo-kp-crop1 {
+    position: fixed !important;
+}
